profile-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  selector:
    app: profile-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
