profile-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: profile-service-routes
spec:
  parentRefs:
    - name: my-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /profile
          method: GET
        - path:
            type: PathPrefix
            value: /profile
          method: PATCH
      backendRefs:
        - name: profile-service
          port: 8000
